Upload the Deploy

--- a/src/app/page/nav/nav.component.html
+++ b/src/app/page/nav/nav.component.html
@@ -13,11 +13,11 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#"><i class="fas fa-user"></i>
-                  Profile <span class="sr-only">(current)</span></a>
+                  Profile </a>
               </li>
           <li class="nav-item active">
             <a class="nav-link" href="#"><i class="fas fa-sign-out-alt"></i>
-              Logout <span class="sr-only">(current)</span></a>
+              Logout</a>
           </li>
         </ul>
       </form>
@@ -35,13 +35,13 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
       <ul id="menu-main-nav" class="navbar-nav nav-fill w-100">
         <li id="menu-item-42" class="nav-item  menu-item-42"><a href="XXX" class="nav-link"><i
-              class="fas fa-tachometer-alt" style="font-size:27px;color:green"></i><br>dashboard</a></li>
+              class="fas fa-tachometer-alt" style="font-size:20px;color:green"></i><br><h6>dashboard</h6></a></li>
         <li id="menu-item-42" class="nav-item  menu-item-42"><a href="XXX" class="nav-link"><i class="fas fa-drum"
-              style="font-size:27px;color:red"></i><br>เครื่องดนตรี</a></li>
+              style="font-size:20px;color:red"></i><br><h6>เครื่องดนตรี</h6></a></li>
         <li id="menu-item-42" class="nav-item  menu-item-42"><a href="XXX" class="nav-link"><i class="fas fa-music"
-              style="font-size:27px;color:palevioletred"></i><br>โน๊ตสากล</a></li>
+              style="font-size:20px;color:palevioletred"></i><br><h6>โน๊ตสากล</h6></a></li>
         <li id="menu-item-42" class="nav-item  menu-item-42"><a href="XXX" class="nav-link"><i class="fas fa-diagnoses"
-              style="font-size:27px;color:purple"></i><br>เครื่องและโน๊ต</a></li>
+              style="font-size:20px;color:purple"></i><br><h6>เครื่องและโน๊ต</h6></a></li>
       </ul>
     </div>
   </div>
