--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -37,12 +37,17 @@
                 </div>
             </div>
         </form>
-        <div class="row no-gutters">
-                <div class="col">
-                    <button class="btn btn-success col-12">
-                        <h6><i class="fas fa-sign-in-alt"></i> </h6>
-                    </button>
-                </div>
+        <br>
+        <div class="row">
+            <div class="col-6">
+                <a class="nav-link" href="#"><i class="fas fa-user-times"></i>
+                    ลืมรหัสผ่าน</a>
             </div>
+            <div class="col-6 text-right">
+                <a class="nav-link" href="#"><i class="fas fa-user-plus"></i>
+                    สมัคร</a>
+            </div>
+        </div>
+
     </div>
 </div>
