--- a/src/app/page/nav/nav.component.html
+++ b/src/app/page/nav/nav.component.html
@@ -16,7 +16,7 @@
                   Profile </a>
               </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#"><i class="fas fa-sign-out-alt"></i>
+            <a (click)="Logout()" class="nav-link" href="#"><i class="fas fa-sign-out-alt"></i>
               Logout</a>
           </li>
         </ul>
