--- a/src/app/page/nav/nav.component.html
+++ b/src/app/page/nav/nav.component.html
@@ -35,13 +35,13 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
       <ul id="menu-main-nav" class="navbar-nav nav-fill w-100">
         <li id="menu-item-42" class="nav-item  menu-item-42"><a href="XXX" class="nav-link"><i
-              class="fas fa-tachometer-alt" style="font-size:20px;color:green"></i><br><h6>dashboard</h6></a></li>
+              class="fas fa-bars" style="font-size:20px;color:green"></i><br><h6>เมนู</h6></a></li>              
+        <li id="menu-item-42" class="nav-item  menu-item-42"><a href="XXX" class="nav-link"><i class="fas fa-music"
+          style="font-size:20px;color:palevioletred"></i><br><h6>โน๊ตสากล</h6></a></li>
         <li id="menu-item-42" class="nav-item  menu-item-42"><a href="XXX" class="nav-link"><i class="fas fa-drum"
               style="font-size:20px;color:red"></i><br><h6>เครื่องดนตรี</h6></a></li>
-        <li id="menu-item-42" class="nav-item  menu-item-42"><a href="XXX" class="nav-link"><i class="fas fa-music"
-              style="font-size:20px;color:palevioletred"></i><br><h6>โน๊ตสากล</h6></a></li>
         <li id="menu-item-42" class="nav-item  menu-item-42"><a href="XXX" class="nav-link"><i class="fas fa-diagnoses"
-              style="font-size:20px;color:purple"></i><br><h6>เครื่องและโน๊ต</h6></a></li>
+              style="font-size:20px;color:purple"></i><br><h6>ประเภทของวงดนตรีและข้อมูลที่เกี่ยวข้อง</h6></a></li>
       </ul>
     </div>
   </div>
